--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,16 @@
           <h4 class="text-xl font-semibold mb-2 text-blue-400">Personal Portfolio Website</h4>
           <p class="text-gray-400">This very site! Built with HTML, Tailwind CSS, and a custom dark/light mode switcher.</p>
         </div>
+        <!-- New Portfolio Item -->
+        <div class="bg-gradient-to-br from-blue-700 via-purple-600 to-pink-500 p-1 rounded-xl shadow-xl hover:scale-105 transition-transform">
+          <div class="bg-gray-900 rounded-xl p-6 h-full flex flex-col justify-between">
+            <h4 class="text-xl font-semibold mb-2 text-pink-300 flex items-center justify-center gap-2">
+              <svg class="w-6 h-6 inline-block animate-spin-slow" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" stroke="#f472b6" stroke-width="2" fill="none"/><path d="M12 6v6l4 2" stroke="#f472b6" stroke-width="2" stroke-linecap="round"/></svg>
+              Live Data Dashboard
+            </h4>
+            <p class="text-gray-300">A real-time dashboard visualizing live cryptocurrency prices and trends, built with JavaScript and WebSockets for instant updates.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
