--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div>
         <h2 class="hero-title text-4xl md:text-6xl font-extrabold mb-4 text-white leading-tight">Build Better <span class="text-blue-400">Digital</span> Products</h2>
         <p class="hero-desc text-gray-400 max-w-xl mx-auto mb-6">We’re a full-service digital agency helping brands grow with elegant and impactful solutions.</p>
-        <a href="#" class="hero-btn px-6 py-3 bg-blue-500 hover:bg-blue-600 rounded-lg font-semibold text-white transition">Get Started</a>
+        <a href="getstarted.html" class="hero-btn px-6 py-3 bg-blue-500 hover:bg-blue-600 rounded-lg font-semibold text-white transition">Get Started</a>
       </div>
     </section>
 
